...
        APIManager.login(user: user!, password: password!) { (success, error, trainer) -> () in
            if success{
                self.trainer = trainer
                self.performSegueWithIdentifier("showProfile", sender: nil)
            }else{
                print(error)
                let alertController = UIAlertController(title: "Wrong Credentials", message: "Check your username and/or password and try again", preferredStyle: .Alert)
                let cancelAction = UIAlertAction(title: "OK", style: .Cancel, handler: nil)
                alertController.addAction(cancelAction)
                
                self.presentViewController(alertController, animated: true, completion: nil)
            }
        }
    }
...
